// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Controlled 1`] = `
<style>
  .checkbox-group-controlled-section {
  display: flex;
  gap: var(--ds-size-2);
}
.checkbox-group-controlled-button {
  width: fit-content;
}
</style>
<fieldset aria-labelledby="<generated>">
  <legend id="<generated>">
    Utdanningsnivå
  </legend>
  <ds-field data-clickdelegatefor="<generated>">
    <input
      type="checkbox"
      value="barnehage"
      checked
      name="my-controlled"
      id="<generated>"
    >
    <label
      data-weight="regular"
      for="<generated>"
    >
      Barnehage
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<generated>">
    <input
      type="checkbox"
      value="grunnskole"
      name="my-controlled"
      id="<generated>"
    >
    <label
      data-weight="regular"
      for="<generated>"
    >
      Grunnskole
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<generated>">
    <input
      type="checkbox"
      value="videregaende"
      checked
      name="my-controlled"
      id="<generated>"
    >
    <label
      data-weight="regular"
      for="<generated>"
    >
      Videregående
    </label>
  </ds-field>
</fieldset>
<p
  data-field="validation"
  hidden
  id="<generated>"
>
</p>
<hr aria-hidden="true">
<p>
  (Annet innhold)
</p>
<hr aria-hidden="true">
<div>
  <p>
    Viser innhold for:
  </p>
  <button
    type="button"
    data-removable="true"
    aria-label="Slett Barnehage"
  >
    Barnehage
  </button>
  <button
    type="button"
    data-removable="true"
    aria-label="Slett Videregående"
  >
    Videregående
  </button>
</div>
<button
  data-variant="secondary"
  type="button"
>
  Tøm filtre
</button>
`;

exports[`Default 1`] = `
<fieldset>
  <ds-field data-clickdelegatefor="<generated>">
    <input
      type="checkbox"
      value="epost"
      checked
      name="my-group"
      id="<generated>"
    >
    <label
      data-weight="regular"
      for="<generated>"
    >
      E-post
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<generated>">
    <input
      type="checkbox"
      value="telefon"
      name="my-group"
      id="<generated>"
    >
    <label
      data-weight="regular"
      for="<generated>"
    >
      Telefon
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<generated>">
    <input
      type="checkbox"
      value="sms"
      name="my-group"
      id="<generated>"
    >
    <label
      data-weight="regular"
      for="<generated>"
    >
      SMS
    </label>
  </ds-field>
  <p
    data-field="validation"
    hidden
    id="<generated>"
  >
  </p>
</fieldset>
`;

exports[`Disabled 1`] = `
<fieldset aria-labelledby="<generated> <generated>">
  <legend id="<generated>">
    Hvordan vil du helst at vi skal kontakte deg?
  </legend>
  <p id="<generated>">
    Velg de alternativene som er relevante for deg.
  </p>
  <ds-field data-clickdelegatefor="<generated>">
    <input
      disabled
      type="checkbox"
      value="epost"
      checked
      name="my-disabled"
      id="<generated>"
    >
    <label
      data-weight="regular"
      for="<generated>"
    >
      E-post
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<generated>">
    <input
      disabled
      type="checkbox"
      value="telefon"
      name="my-disabled"
      id="<generated>"
    >
    <label
      data-weight="regular"
      for="<generated>"
    >
      Telefon
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<generated>">
    <input
      disabled
      type="checkbox"
      value="sms"
      name="my-disabled"
      id="<generated>"
    >
    <label
      data-weight="regular"
      for="<generated>"
    >
      SMS
    </label>
  </ds-field>
  <p
    data-field="validation"
    hidden
    id="<generated>"
  >
  </p>
</fieldset>
`;

exports[`Group 1`] = `
<fieldset aria-labelledby="<generated> <generated>">
  <legend id="<generated>">
    Hvordan vil du helst at vi skal kontakte deg?
  </legend>
  <p id="<generated>">
    Velg de alternativene som er relevante for deg.
  </p>
  <ds-field data-clickdelegatefor="<generated>">
    <input
      type="checkbox"
      value="epost"
      checked
      name="my-group"
      id="<generated>"
    >
    <label
      data-weight="regular"
      for="<generated>"
    >
      E-post
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<generated>">
    <input
      type="checkbox"
      value="telefon"
      name="my-group"
      id="<generated>"
    >
    <label
      data-weight="regular"
      for="<generated>"
    >
      Telefon
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<generated>">
    <input
      type="checkbox"
      value="sms"
      name="my-group"
      id="<generated>"
    >
    <label
      data-weight="regular"
      for="<generated>"
    >
      SMS
    </label>
  </ds-field>
  <p
    data-field="validation"
    hidden
    id="<generated>"
  >
  </p>
</fieldset>
`;

exports[`Indeterminate In Table 1`] = `
<style>
  .checkbox-group-col-1 {
          width: 1px;
        }
        .checkbox-group-col-2 {
          width: 10em;
        }
</style>
<table>
  <colgroup>
    <col>
    <col>
    <col>
  </colgroup>
  <thead>
    <tr>
      <th>
        <ds-field data-clickdelegatefor="<generated>">
          <input
            aria-label="Velg alle"
            type="checkbox"
            value="all"
            name="hooks-usecheckboxgroup--indeterminate-in-table"
            id="<generated>"
          >
        </ds-field>
      </th>
      <th>
        Navn
      </th>
      <th>
        Utdanningsnivå
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <ds-field data-clickdelegatefor="<generated>">
          <input
            aria-labelledby="hooks-usecheckboxgroup--indeterminate-in-table-1-name"
            type="checkbox"
            value="1"
            name="hooks-usecheckboxgroup--indeterminate-in-table"
            id="<generated>"
          >
        </ds-field>
      </td>
      <td id="hooks-usecheckboxgroup--indeterminate-in-table-1-name">
        Lise Nordmann
      </td>
      <td>
        Barnehage
      </td>
    </tr>
    <tr>
      <td>
        <ds-field data-clickdelegatefor="<generated>">
          <input
            aria-labelledby="hooks-usecheckboxgroup--indeterminate-in-table-2-name"
            type="checkbox"
            value="2"
            checked
            name="hooks-usecheckboxgroup--indeterminate-in-table"
            id="<generated>"
          >
        </ds-field>
      </td>
      <td id="hooks-usecheckboxgroup--indeterminate-in-table-2-name">
        Ola Nordmann
      </td>
      <td>
        Grunnskole
      </td>
    </tr>
    <tr>
      <td>
        <ds-field data-clickdelegatefor="<generated>">
          <input
            aria-labelledby="hooks-usecheckboxgroup--indeterminate-in-table-3-name"
            type="checkbox"
            value="3"
            checked
            name="hooks-usecheckboxgroup--indeterminate-in-table"
            id="<generated>"
          >
        </ds-field>
      </td>
      <td id="hooks-usecheckboxgroup--indeterminate-in-table-3-name">
        Kari Nordmann
      </td>
      <td>
        Videregående
      </td>
    </tr>
    <tr>
      <td>
        <ds-field data-clickdelegatefor="<generated>">
          <input
            aria-labelledby="hooks-usecheckboxgroup--indeterminate-in-table-4-name"
            type="checkbox"
            value="4"
            name="hooks-usecheckboxgroup--indeterminate-in-table"
            id="<generated>"
          >
        </ds-field>
      </td>
      <td id="hooks-usecheckboxgroup--indeterminate-in-table-4-name">
        Per Nordmann
      </td>
      <td>
        Barnehage
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Outline 1`] = `
<fieldset aria-labelledby="<generated> <generated>">
  <legend id="<generated>">
    Hvordan vil du helst at vi skal kontakte deg?
  </legend>
  <p id="<generated>">
    Velg de alternativene som er relevante for deg.
  </p>
  <ds-field
    data-variant="outline"
    data-clickdelegatefor="<generated>"
  >
    <input
      type="checkbox"
      value="epost"
      checked
      name="my-group"
      id="<generated>"
    >
    <label
      data-weight="regular"
      for="<generated>"
    >
      E-post
    </label>
  </ds-field>
  <ds-field
    data-variant="outline"
    data-clickdelegatefor="<generated>"
  >
    <input
      type="checkbox"
      value="telefon"
      name="my-group"
      id="<generated>"
    >
    <label
      data-weight="regular"
      for="<generated>"
    >
      Telefon
    </label>
  </ds-field>
  <ds-field
    data-variant="outline"
    data-clickdelegatefor="<generated>"
  >
    <input
      type="checkbox"
      value="sms"
      name="my-group"
      id="<generated>"
    >
    <label
      data-weight="regular"
      for="<generated>"
    >
      SMS
    </label>
  </ds-field>
  <p
    data-field="validation"
    hidden
    id="<generated>"
  >
  </p>
</fieldset>
`;

exports[`Read Only 1`] = `
<fieldset aria-labelledby="<generated> <generated>">
  <legend id="<generated>">
    Hvordan vil du helst at vi skal kontakte deg?
  </legend>
  <p id="<generated>">
    Velg de alternativene som er relevante for deg.
  </p>
  <ds-field data-clickdelegatefor="<generated>">
    <input
      readonly
      type="checkbox"
      value="epost"
      checked
      name="my-readonly"
      id="<generated>"
    >
    <label
      data-weight="regular"
      for="<generated>"
    >
      E-post
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<generated>">
    <input
      readonly
      type="checkbox"
      value="telefon"
      name="my-readonly"
      id="<generated>"
    >
    <label
      data-weight="regular"
      for="<generated>"
    >
      Telefon
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<generated>">
    <input
      readonly
      type="checkbox"
      value="sms"
      name="my-readonly"
      id="<generated>"
    >
    <label
      data-weight="regular"
      for="<generated>"
    >
      SMS
    </label>
  </ds-field>
  <p
    data-field="validation"
    hidden
    id="<generated>"
  >
  </p>
</fieldset>
`;

exports[`With Error 1`] = `
<fieldset aria-labelledby="<generated> <generated>">
  <legend id="<generated>">
    Hvordan vil du helst at vi skal kontakte deg?
  </legend>
  <p id="<generated>">
    Velg de alternativene som er relevante for deg.
  </p>
  <ds-field data-clickdelegatefor="<generated>">
    <input
      aria-describedby="<generated> <generated>"
      aria-invalid="true"
      type="checkbox"
      value="epost"
      checked
      name="my-error"
      id="<generated>"
    >
    <label
      data-weight="regular"
      for="<generated>"
    >
      E-post
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<generated>">
    <input
      aria-describedby="<generated> <generated>"
      aria-invalid="true"
      type="checkbox"
      value="telefon"
      name="my-error"
      id="<generated>"
    >
    <label
      data-weight="regular"
      for="<generated>"
    >
      Telefon
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<generated>">
    <input
      aria-describedby="<generated> <generated>"
      aria-invalid="true"
      type="checkbox"
      value="sms"
      name="my-error"
      id="<generated>"
    >
    <label
      data-weight="regular"
      for="<generated>"
    >
      SMS
    </label>
  </ds-field>
  <p
    data-field="validation"
    id="<generated>"
  >
    Du må velge minst to kontaktalternativ
  </p>
</fieldset>
`;
